<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fitness Companion</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1682339881994052</string>
    <string name="nullString">NULL</string>
    <string name="empty">--</string>
    <string name="IChoiceRemark">Open \'Pair IChoice device\' to synchronize step number.</string>

    <!-- auto generate -->
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="title_activity_user_profile_page">UserProfilePage</string>
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
    <string name="title_activity_screen_slide_page_fragment">ScreenSlidePageFragment</string>
    <string name="title_activity_health_profile_page">HealthProfilePage</string>
    <string name="title_activity_achievement_menu">AchievementMenu</string>
    <string name="title_activity_history_page">HistoryPage</string>
    <string name="title_activity_ranking_page">RankingPage</string>
    <string name="title_activity_HRStrip">HeartRateDeviceScan</string>
    <string name="title_activity_schedule_pause_alarm">SchedulePauseAlarm</string>-->
    <string name="title_activity_forget_password">ForgetPassword</string>
    <string name="title_activity_profile_menu">ProfileMenu</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_exercise_menu">ExerciseMenu</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_metal_page">MedalPage</string>
    <string name="title_activity_goal_page">GoalPage</string>
    <string name="title_activity_schedule_page">SchedulePage</string>
    <string name="title_activity_friends_page">FriendsPage</string>
    <string name="title_activity_schedule_new_page">ScheduleNewPage</string>
    <string name="title_activity_challenge_page">ChallengePage</string>
    <string name="title_activity_event_page">EventPage</string>
    <string name="title_activity_my_sleep_data_graph_view">MySleepDataGraphView</string>
    <string name="title_activity_activity_plan_page">ActivityPlanPage</string>
    <string name="title_activity_congratulation_page">CongratulationPage</string>

    <!-- login -->
    <string name="login">Login</string>
    <string name="forgetPassword"><u>Forget Password</u></string>
    <string name="signIn">Sign In</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>

    <!-- Sign UP-->
    <string name="signUp">Sign Up</string>
    <string name="register">Register</string>
    <string name="signUpRemind">*Required</string>

    <!--profile-->
    <string name="profile">Profile</string>
    <string name="title_activity_sign_up_page">SignUpPage</string>
    <string name="email">Email*</string>
    <string name="username">Username*</string>
    <string name="dateOfBirth">Date of Birth*</string>
    <string name="gender">Gender*</string>
    <string name="height">Height*</string>
    <string name="weight">Weight</string>
    <string name="health_details">Health Detail</string>
    <string name="bodyGirth">Body Girth</string>
    <string name="arm">Arm Girth</string>
    <string name="chest">Chest Girth</string>
    <string name="calf">Calf Girth</string>
    <string name="thigh">Thigh Girth</string>
    <string name="waist">Waist</string>
    <string name="hip">HIP</string>
    <string name="bloodPressure">Blood Pressure</string>
    <string name="restingHeartRate">Resting Heart Rate </string>
    <string name="healthResult">Health Result</string>
    <string name="BMR">Basal Metabolic Rate (BMR)</string>
    <string name="BMI">Body Mass Index (BMI)</string>
    <string name="WHR">Waist to Hip Ratio (WHR)</string>
    <string name="weightUnit">KG</string>
    <string name="bloodPressureUnit">mmHg</string>
    <string name="heartRateUnit">bpm</string>
    <string name="lengthUnit">cm</string>

    <!-- Exercise -->
    <string name="warmUp">Warm Up For 5-15 minutes</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="end">End</string>
    <string name="target">Target :</string>
    <string name="planType">Plan Type :</string>
    <string name="caloriesBurnMin">Calories Burn/Min :</string>
    <string name="bestDuration">Best Duration :</string>
    <string name="maxHR">Max HR :</string>
    <string name="exerciseRemark">Bring your phone to keep track distance.</string>
    <string name="stepNumber">Step Number</string>
    <string name="activityPlan">Activity Plan</string>
    <string name="warmingUp">Warming Up...</string>
    <string name="coolingDown">Cooling down...</string>
    <string name="info">INFORMATION</string>
    <string name="distanceUnit">m</string>

    <!-- Goal -->
    <string name="goal">Goal</string>
    <string name="noGoal">No Goal Created</string>

    <!-- Schedule -->
    <string name="schedule">Reminder</string>
    <string name="addSchedule">Add New Reminder</string>
    <string name="newReminder">New Reminder</string>
    <string name="save">Save</string>
    <string name="activityLabel">Activity :</string>
    <string name="repeatLabel">Repeat :</string>
    <string name="timeLabel">Time :</string>
    <string name="dayLabel">Day :</string>

    <!--Achievement-->
    <string name="achievement">Achievement</string>
    <string name="goTo"> > </string>

    <!-- Medal -->
    <string name="medal">Medal</string>
    <string name="medalTitle">Medal</string>
    <string name="walkMetalDividen">Walking </string>
    <string name="runMetalDividen">Running </string>
    <string name="cycleMetalDividen">Cycling </string>
    <string name="hikeMetalDividen">Hiking </string>

    <!-- Ranking -->
    <string name="rankingTitle">Ranking</string>

    <!-- History -->
    <string name="historyTitle">History</string>

    <!-- Event -->
    <string name="eventTitle">Event</string>

    <!--Graph -->
    <string name="activity">Activity</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="duration">Duration</string>
    <string name="calories">Calories</string>
    <string name="distance">Distance</string>
    <string name="AveHR">Average Heart Rate </string>
    <string name="changeView">Change View</string>
    <string name="sleepQuality">Sleep Quality :</string>
    <string name="totalSleepTime">Total Sleep Time</string>
    <string name="asleepTime">Asleep Time</string>
    <string name="timeAwake">Times Awaken </string>
    <string name="exerciseHistory">Exercise History</string>
    <string name="realTimeHistory">Real Time History</string>
    <string name="sleepData">Sleep Data</string>

    <!---HR BLE-->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="non_hr_device">Non Heart rate device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="default_text">--</string>
    <string name="title_activity_heart_rate_monitor">HeartRateMonitor</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- GCM -->
    <string name="gcm_sender">1006303312173</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <!-- IChoice Activity -->
    <string name="btn_lbl_find">FIND \nDEVICE</string>
    <string name="btn_lbl_link">LINK \nDEVICE</string>
    <string name="btn_lbl_unlink">UNLINK \nDEVICE</string>
    <string name="get_history">GET HISTORY DATA</string>
    <string name="set_profile">SET PROFILE</string>
    <string name="set_greetings">SET GREETING</string>
    <string name="set_targets">SET TARGET</string>
    <string name="set_distance_unit">SET DISTANCE UNIT</string>
    <string name="set_celsius_unit">SET CELSIUS UNIT</string>
    <string name="set_time">SET TIME</string>
    <string name="tutorial_instrustion">You Need Turn Off Your IChoice Device To Sleep Mode After Click Find Device, Then Switch Back When Bluetooth is On</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ichoice">IChoiceActivity</string>
    <string name="estimateCalories">Estimate calories per minutes :</string>

    <!-- VirtualRacerMainPage -->
    <string name="targetchallenge">Target / Challenge</string>
    <string name="totaldistance">Total Distance</string>
    <string name="totalduration">Total Duration</string>
    <string name="speedVR">Speed </string>
    <string name="speedunit">km/h</string>
    <string name="distanceVR">Distance </string>
    <string name="distanceunit">km</string>
    <string name="timeVR">Time </string>
    <string name="startVR">Start</string>
    <string name="gps_info">Waiting for GPS signal...</string>

    <!-- VirtualRacerSetTarget -->
    <string name="settarget">Set Target</string>
    <string name="distance2">Distance</string>
    <string name="time2">Time: </string>
    <string name="hour">hour</string>
    <string name="minute">minute(s)</string>
    <string name="accept">Accept</string>
    <string name="reset">Reset</string>

    <!-- VirtualRacerSetChallenge -->
    <string name="setchallenge">Set Challenge</string>
    <string name="difficulty">Difficulty</string>
    <string name="set">Set</string>

    <!-- VirtualRacerViewPastRecord -->
    <string name="pastrecord">Past Records</string>
    <string name="past5record">Last 5 Record</string>
    <string name="bestrecord">Best Record</string>
    <string name="date">Date: </string>
    <string name="avgspeed">Avg Speed: </string>
    <string name="timeused">Time Used: </string>

    <!-- Chart -->
    <string name="chart">Chart</string>

    <!-- Food Nutrient -->
    <string name="food">Food Nutrient</string>
    <string name="category">Category</string>

</resources>
