<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_virtual_racer_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.com.taruc.fitnesscompanion.VirtualRacer.VirtualRacerMainActivity">

    <include layout="@layout/title_bar"
        android:id="@+id/titleBar"/>

    <TextView
        android:text="@string/targetchallenge"
        android:textAlignment="center"
        android:textSize="@dimen/fontSizeLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/textViewMain"
        android:layout_below="@+id/titleBar"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:id="@+id/viewHoriRule"
        android:layout_below="@+id/textViewMain"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonTable"
        android:layout_below="@+id/viewHoriRule">

        <TableRow
            android:paddingTop="5dp"
            android:paddingBottom="5dp">
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/btnSetTarget"
                android:layout_column="0"
                android:src="@drawable/set_target"
                android:layout_weight="1"
                android:background="@drawable/circle_icon_button" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/btnSetChallenge"
                android:layout_column="1"
                android:src="@drawable/set_challenge"
                android:layout_weight="1"
                android:background="@drawable/circle_icon_button" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/btnViewPastRecord"
                android:layout_column="2"
                android:src="@drawable/view_pastrecord"
                android:layout_weight="1"
                android:background="@drawable/circle_icon_button" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:id="@+id/viewHoriRule2"
        android:layout_below="@+id/imgButtonTable"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgButtonTable"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/tableDistTime">

        <TableRow>
            <TextView
                android:id="@+id/totalDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totaldistance"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_margin="1dp"
                android:layout_column="0"/>
            <TextView
                android:text=":"
                android:textSize="@dimen/fontSizeLarge"
                android:textStyle="bold"
                android:layout_margin="1dp"
                android:layout_column="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/distanceAmount"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_column="2"
                android:hint="test"/>
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/totalDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalduration"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_margin="1dp"
                android:layout_column="0"/>
            <TextView
                android:text=":"
                android:textSize="@dimen/fontSizeLarge"
                android:textStyle="bold"
                android:layout_margin="1dp"
                android:layout_column="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                android:id="@+id/durationAmount"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_column="2"
                android:hint="test"/>
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:id="@+id/viewHoriRule3"
        android:layout_below="@+id/tableDistTime"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainAnimation"
        android:layout_below="@+id/viewHoriRule3" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:id="@+id/viewHoriRule4"
        android:layout_below="@+id/mainAnimation"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/framelayout"
        android:layout_below="@+id/mainAnimation">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:id="@+id/imageVR"
            android:src="@drawable/background1" />
        <ImageView
            android:id="@+id/imageVR2"
            android:layout_width="wrap_content"
            android:layout_height="114dp"
            android:src="@drawable/background1"
            android:layout_marginRight="-750dp" />
        <ImageView
            android:id="@+id/stickman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/run"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/tableLiveDetails" />
    </FrameLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/framelayout"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:id="@+id/tableLiveDetails">

        <TableRow>
            <TextView
                android:id="@+id/currentDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distanceVR"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_margin="1dp"
                android:layout_column="0" />
            <TextView
                android:text=":"
                android:layout_column="1"
                android:textSize="@dimen/fontSizeLarge"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"/>
            <TextView
                android:id="@+id/currentDistanceResult"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_margin="1dp"
                android:layout_column="2"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:id="@+id/distanceUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distanceunit"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_margin="1dp"
                android:layout_column="3"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/currentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeVR"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_margin="1dp"
                android:layout_column="0"/>
            <TextView
                android:text=":"
                android:layout_column="1"
                android:textSize="@dimen/fontSizeLarge"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"/>
            <Chronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chronometerTimer"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_column="2"
                android:textIsSelectable="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CountDownTimer"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_column="3"
                android:textIsSelectable="false"
                android:visibility="invisible"
                android:text="00:00" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/currentSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speedVR"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_margin="1dp"
                android:layout_column="0"/>
            <TextView
                android:text=":"
                android:layout_column="1"
                android:textSize="@dimen/fontSizeLarge"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"/>
            <TextView
                android:id="@+id/currentSpeedResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_margin="1dp"
                android:layout_column="2"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"/>
            <TextView
                android:id="@+id/speedUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speedunit"
                android:textSize="@dimen/fontSizeLarge"
                android:layout_margin="1dp"
                android:layout_column="3"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"/>
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:id="@+id/viewHoriRule5"
        android:layout_below="@+id/tableLiveDetails"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warmUp"
        android:layout_below="@+id/viewHoriRule5"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/TextViewStage"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        android:layout_below="@+id/TextViewStage"
        android:text="@string/start"
        android:onClick="buttonStart"/>
</RelativeLayout>
